syntax = "proto3";

package asset;

service CRUD {
    rpc create (asset) returns (log);
}

service DB {
    rpc update (API_log) returns (DB_log);
}

message asset {
    string company_code = 1;
    string asset_number = 2;
    string description = 3;
}

message log {
    API_log api_log = 1;
    DB_log db_log = 2;
}

message API_log {
    string text = 1;
}

message DB_log {
    string text = 1;
}